revise part of the two newly translated lectures

--- a/lecture6-CN.ipynb
+++ b/lecture6-CN.ipynb
@@ -13,7 +13,7 @@
    "id": "fd3ee4eb",
    "metadata": {},
    "source": [
-    "在先前的章节中，我们已经学到了一些基本的渐近理论。我们可以应用这些结论来学习OLS统计量$\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'Y$的各种性质。 这是我们课程中的核心部分。在本章节我们将会展示：（i） $\\widehat{\\beta}$ 是线性投影系数 $\\beta$ 的一致估计量；（ii）$\\widehat{\\beta}$ 满足渐近正态分布；（iii） 渐近正态性使得可以对于 $\\beta$ 有渐近收敛；（iiii）在什么条件假设下我们可以提出一个可行的检验过程，从而对检验统计量中的方差分量作出一致估计。"
+    "在先前的章节中，我们已经学习了一些基本的渐近理论。我们可以应用这些结论来推导OLS统计量$\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'Y$的许多性质。 这是我们课程中的核心部分。在本章节我们将会覆盖如下要点：（i） $\\widehat{\\beta}$ 是线性投影系数 $\\beta$ 的一致估计量；（ii）$\\widehat{\\beta}$ 满足渐近正态分布；（iii） 渐近正态性使得可以对于 $\\beta$ 有渐近收敛；（iiii）在什么条件假设下我们可以提出一个可行的检验过程，从而对检验统计量中的方差分量作出一致估计。"
    ]
   },
   {
@@ -21,7 +21,9 @@
    "id": "d0cfdbad",
    "metadata": {},
    "source": [
-    "## 一致性"
+    "## 一致性\n",
+    "\n",
+    "change 一致性 to 相合性"
    ]
   },
   {
@@ -29,19 +31,19 @@
    "id": "93793f32",
    "metadata": {},
    "source": [
-    "**一致性**是大样本估计中对于估计量最基本的要求。根据我们的直觉，对于一个任意大小的样本量，一个理想的估计量应该尽可能接近（依概率收敛）至真实值。如果有一个估计量，通过无限样本得出的估计以后仍然与真实值存在偏差，那么恐怕也很难说服其他的学者使用这个估计量。\n",
+    "**一致性**是大样本估计中对于估计量最基本的要求。根据我们的直觉，对于一个任意大小的样本量，一个理想的估计量应该尽可能接近（依概率收敛到）真实值。如果一个估计量在任意大的样本之下仍然与真实值存在偏差，那么恐怕也很难说服他人使用这个估计量。\n",
     "\n",
-    "不失普遍性，对于估计量 $\\widehat{\\theta}$ ，如果满足 $\\widehat{\\theta}\\stackrel{p}{\\to}\\theta$ ，那么认为 $\\widehat{\\theta}$ 是 $\\theta$ 的**一致估计**，其中 $\\theta$ 是非随机对象。\n",
+    "对于一个估计量 $\\widehat{\\theta}$ ，如果满足 $\\widehat{\\theta}\\stackrel{p}{\\to}\\theta$ ，则称 $\\widehat{\\theta}$ 为 $\\theta$ 的**一致估计**，其中 $\\theta$ 是一个非随机常数。\n",
     "\n",
-    "在OLS当中，如果$n\\to\\infty$ 时 $\\widehat{\\beta}\\stackrel{p}{\\to}\\beta$ ，那么我们认为 $\\widehat{\\beta}$ 是**一致的**。其中的 $\\beta$ 是模型 $y_{i}=x_{i}'\\beta+e_{i}$ with $E\\left[x_{i}e_{i}\\right]=0$ 的线性映射系数。\n",
+    "在OLS当中，如果$n\\to\\infty$ 时 $\\widehat{\\beta}\\stackrel{p}{\\to}\\beta$ ，则称 $\\widehat{\\beta}$ 是**一致的**。其中的 $\\beta$ 是模型 $y_{i}=x_{i}'\\beta+e_{i}$ with $E\\left[x_{i}e_{i}\\right]=0$ 的线性映射系数。\n",
     "\n",
     "为了验证存在的**一致性**，我们参考公式\n",
     "\n",
     "$$\n",
-    "\\widehat{\\beta}-\\beta=\\left(X'X\\right)^{-1}X'e=\\left(\\frac{1}{n}\\sum_{i=1}^{n}x_{i}x_{i}'\\right)^{-1}\\frac{1}{n}\\sum_{i=1}^{n}x_{i}e_{i}.\\label{eq:ols_d}\n",
+    "\\widehat{\\beta}-\\beta=\\left(X'X\\right)^{-1}X'e=\\left(\\frac{1}{n}\\sum_{i=1}^{n}x_{i}x_{i}'\\right)^{-1}\\frac{1}{n}\\sum_{i=1}^{n}x_{i}e_{i}.\n",
     "$$\n",
     "\n",
-    "为了简化理解，在本章节中我们只考虑独立同分布（iid）的情况。\\\n",
+    "为了简化理解，在本章节中我们只考虑独立同分布（iid）的情况。\n",
     "通过大数定律（LLN）我们可以得到：\n",
     "\n",
     "$$\n",
@@ -56,13 +58,13 @@
     "\\frac{1}{n}\\sum_{i=1}^{n}x_{i}e_{i}\\stackrel{p}{\\to}0.\n",
     "$$\n",
     "\n",
-    "基于连续映射定理有：\n",
+    "基于连续映射定理，我们有：\n",
     "\n",
     "$$\n",
     "\\widehat{\\beta}-\\beta\\stackrel{p}{\\to}Q^{-1}\\times0=0.\n",
     "$$\n",
     "\n",
-    "里面的 $\\widehat{\\beta}$ 是 $\\beta$ 的 一致估计量。\n",
+    "我们证明了 $\\widehat{\\beta}$ 是 $\\beta$ 的 一致估计量。\n",
     "\n",
     "```{admonition} Remark\n",
     "\n",
@@ -87,8 +89,8 @@
    "source": [
     "在有限样本中，$\\widehat{\\beta}$ 是随机变量。先前我们已经展示过正态分布的下的 $\\widehat{\\beta}$ 。没有了正态分布假设的约束，我们将如何描述OLS估计量的随机性呢？\n",
     "\n",
-    "从前面的部分我们已经学到了，$\\hat{\\beta}-\\beta\\stackrel{p}{\\to}0$ 会归于一个常数。为了研究它们的分布，我们需要用一个合适的乘数把它放大，使得它即不会收敛也不会发散。这个合适的参数就是 $\\sqrt{n}$ 。\\\n",
-    "在中心极限定理（CLT）中：\n",
+    "从前面的部分我们已经学到了，$\\hat{\\beta}-\\beta\\stackrel{p}{\\to}0$ 会归于一个常数。为了研究它们的分布，我们需要用一个合适的乘数把它放大，使得它在任意大样本下既不收敛也不发散。这个合适的乘数是 $\\sqrt{n}$ 。\n",
+    "在$\\hat{\\beta} - \\beta $ 的显性表达式两边同时乘以 $\\sqrt{n}$: \n",
     "\n",
     "$$\n",
     "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)=\\left(\\frac{1}{n}\\sum_{i=1}^{n}x_{i}x_{i}'\\right)^{-1}\\frac{1}{\\sqrt{n}}\\sum_{i=1}^{n}x_{i}e_{i}.\n",
@@ -101,23 +103,20 @@
     "$$\n",
     "\n",
     "其中 $\\Sigma=E\\left[x_{i}x_{i}'e_{i}^{2}\\right]$ 。\n",
-    "根据连续映射定理有：\n",
+    "\n",
+    "根据连续映射定理,我们得到的结果是OLS估计量的**渐近正态性**:\n",
     "\n",
     "$$\n",
-    "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)\\stackrel{d}{\\to}Q^{-1}\\times N\\left(0,\\Sigma\\right)\\sim N\\left(0,\\Omega\\right)\\label{eq:asym_norm}\n",
+    "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)\\stackrel{d}{\\to}Q^{-1}\\times N\\left(0,\\Sigma\\right)\\sim N\\left(0,Q^{-1}\\Sigma Q^{-1}\\right)\n",
     "$$(eq:asym\\_norm)\n",
     "\n",
-    "其中 $\\Omega=Q^{-1}\\Sigma Q^{-1}$ 被称为**渐进方差**。\n",
-    "得到的结果是OLS估计量的**渐近正态性**。\n",
-    "\n",
-    "$\\Omega=Q^{-1}\\Sigma Q^{-1}$ 被称之为**三明治形式**。在条件同方差的情况下，可以将其简化为：\n",
+    "式子右边正态分布的方差被称为**渐进方差**，这里我们记其为$\\Omega$。在条件同方差的情况下，因为\n",
     "\n",
     "$$\n",
     "E\\left[e_{i}^{2}|x_{i}\\right]=\\sigma^{2}\n",
     "$$\n",
     "\n",
-    "（对于所有的 $i$ 来说）\\\n",
-    "从而得到\n",
+    "对于所有的 $i$ 都成立，从而得到\n",
     "\n",
     "$$\n",
     "\\Sigma=E\\left[x_{i}x_{i}'e_{i}^{2}\\right]=E\\left[x_{i}x_{i}'E\\left[e_{i}^{2}|X\\right]\\right]=\\sigma^{2}E\\left[x_{i}x_{i}'\\right]=\\sigma^{2}Q.\n",
@@ -126,31 +125,41 @@
     "在这个例子里，$\\Omega=Q^{-1}\\Sigma Q^{-1}=\\sigma^{2}Q^{-1}$ ，可以因此推出：\n",
     "\n",
     "$$\n",
-    "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)\\stackrel{d}{\\to}N\\left(0,\\sigma^{2}Q^{-1}\\right).\\label{eq:asym_norm_homo}\n",
+    "\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)\\stackrel{d}{\\to}N\\left(0,\\sigma^{2}Q^{-1}\\right).\n",
     "$$\n",
     "\n",
-    "如果对于 $k$ 阶参数 $\\beta_{k}$ 感兴趣，那么{eq}`eq:asym\\_norm`中的联合分布能够体现\n",
+    "Zhentao revised up here 2022-7-19"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d35c1759",
+   "metadata": {},
+   "source": [
+    "\n",
+    "如果我们感兴趣的不是整个向量$\\beta$，而是其中的第 $k$ 个参数 $\\beta_{k}$，那么后者可以从{eq}`eq:asym\\_norm`中的联合分布推导出来：\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\sqrt{n}\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right) & =\\sqrt{n}\\eta_{k}'\\left(\\widehat{\\beta}-\\beta\\right)\\nonumber \\\\\n",
-    " & \\stackrel{d}{\\to}N\\left(0,\\sigma^{2}\\eta_{k}'Q^{-1}\\eta_{k}\\right)\\sim N\\left(0,\\sigma^{2}[Q^{-1}]_{kk}\\right),\\label{eq:asym_norm_homok}\\end{aligned}\n",
+    "\\sqrt{n}\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right) & =\\sqrt{n}\\eta_{k}'\\left(\\widehat{\\beta}-\\beta\\right) \\\\\n",
+    " & \\stackrel{d}{\\to}N\\left(0,\\sigma^{2}\\eta_{k}'Q^{-1}\\eta_{k}\\right)\\sim N\\left(0,\\sigma^{2}[Q^{-1}]_{kk}\\right),\n",
+    "\\end{aligned}\n",
     "$$(eq:asym\\_norm\\_homok\\_pivot)\n",
     "\n",
-    "其中 $\\eta_{k}=\\left(0,\\ldots,0,1,0\\ldots,0\\right)'$是 $k$ 阶元素的选择器。\n",
+    "其中 $\\eta_{k}=\\left(0,\\ldots,0,1,0\\ldots,0\\right)'$用于选择第 $k$ 个元素。\n",
     "{eq}`eq:asym\\_norm`的两边乘上 $\\Omega^{-1/2}$ ，我们就能得到\n",
     "\n",
     "$$\n",
-    "\\Omega^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)\\stackrel{d}{\\to}N\\left(0,I_{K}\\right).\\label{eq:asym_norm-pivot}\n",
+    "\\Omega^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)\\stackrel{d}{\\to}N\\left(0,I_{K}\\right).\n",
     "$$(eq:asym\\_norm-pivot)\n",
     "\n",
-    "我们说{eq}`eq:asym\\_norm-pivot`中的渐近分布 $N\\left(0,I_{K}\\right)$ 是**枢轴量**。因为它并不涉及任何的未知参数。\\\n",
+    "我们说{eq}`eq:asym\\_norm-pivot`中的渐近分布 $N\\left(0,I_{K}\\right)$ 是**枢轴量**(pivotal), 因为它并不涉及任何的未知参数。\n",
     "相反，{eq}`eq:asym\\_norm`中的渐近分布不是枢轴量，因为 $\\Omega$ 在 $N\\left(0,\\Omega\\right)$ 中是未知的。\n",
     "\n",
     "如果我们想要了解 $\\beta_{k}$ 我们可以将{eq}`eq:asym\\_norm-pivot`以枢轴量的形式写到如下公式中：\n",
     "\n",
     "$$\n",
-    "\\frac{\\sqrt{n}\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)}{\\sqrt{\\sigma^{2}[Q^{-1}]_{kk}}}\\stackrel{d}{\\to}N\\left(0,1\\right).\\label{eq:asym_norm_homok_pivot}\n",
+    "\\frac{\\sqrt{n}\\left(\\widehat{\\beta}_{k}-\\beta_{k}\\right)}{\\sqrt{\\sigma^{2}[Q^{-1}]_{kk}}}\\stackrel{d}{\\to}N\\left(0,1\\right).\n",
     "$$\n",
     "\n"
    ]
@@ -174,13 +183,14 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\tilde{\\Omega}^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right) & =\\tilde{\\Omega}^{-1/2}\\Omega^{1/2}\\times\\Omega^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right).\\end{aligned}\n",
+    "\\tilde{\\Omega}^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right) & =\\tilde{\\Omega}^{-1/2}\\Omega^{1/2}\\times\\Omega^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right).\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "因为 $\\Omega$ 是正定的，根据连续映射定理我们就会得到 $\\tilde{\\Omega}^{-1/2}\\Omega^{1/2}\\stackrel{p}{\\to}I_{K}$ 。第二是通过{eq}`eq:asym\\_norm-pivot`得到的渐近正态。因此**Slutsky's theorem**表示了\n",
     "\n",
     "$$\n",
-    "\\tilde{\\Omega}^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)\\stackrel{d}{\\to}N\\left(0,I_{K}\\right)\\label{eq:asym_norm_feasible}\n",
+    "\\tilde{\\Omega}^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right)\\stackrel{d}{\\to}N\\left(0,I_{K}\\right)\n",
     "$$(eq:asym\\_norm\\_feasible)\n",
     "\n",
     "而{eq}`eq:asym\\_norm\\_feasible`是一个用于统计推断的可靠统计量。"
@@ -304,7 +314,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -318,7 +328,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "98c8651c14c5e67168ec7360df025b52a3dda054aca34605ea6bb4da8d25168e"
+   }
   }
  },
  "nbformat": 4,
