--- a/lecture8-CN.ipynb
+++ b/lecture8-CN.ipynb
@@ -7,15 +7,16 @@
    "source": [
     "# 假设检验\n",
     "\n",
+    "To do:\n",
+    "change 零假设 to 原假设\n",
     "\n",
-    "数学标记: $ \\mathbf{X} $ 是一个随机变量, 或随机向量； $ \\mathbf{x} $ 是其实际数值。\n",
+    "数学标记: $ \\mathbf{X} $ 是一个随机变量, 或随机向量； $ \\mathbf{x} $ 是其实现数。\n",
     "\n",
-    "一个**假设 (hypothesis)**是关于参数空间 $ \\Theta $ 的论断。\n",
+    "一个**假设 (hypothesis)**是关于参数空间 $ \\Theta $ 的陈述。\n",
     "\n",
     "\n",
-    "假设检验检查数据是否满足一个**零假设 (null hypothesis)**$ \\Theta_{0} $ , 也即是我们研究的 $ \\Theta $ 之子集。理想情况下, 这一零假设应该是由科学理论提出的。**备择假设 (alternative hypothesis)**$ \\Theta_{1}=\\Theta\\backslash\\Theta_{0} $ 是 $ \\Theta_{0}的补集。\n",
-    "基于观察到的数据, 我们选择接受或者拒绝零假设。如果零假设被拒绝, 则意味着从统计学角度来看, 数据与所提出的科学理论不相容。\n",
-    "理论。\n",
+    "假设检验检查数据是否满足一个**原假设 (null hypothesis)**$ \\Theta_{0} $ , 也即是我们研究的 $ \\Theta $ 之子集。理想情况下, 这一零假设应该是由科学理论提出的。**备择假设 (alternative hypothesis)**$ \\Theta_{1}=\\Theta\\backslash\\Theta_{0} $ 是 $ \\Theta_{0}的补集。\n",
+    "基于观察到的数据, 我们选择接受或者拒绝零假设。如果零假设被拒绝, 则意味着从统计学角度来看, 数据不支持该科学理论。\n",
     "\n",
     "\n",
     "在本章中, 我们将首先介绍假设检验的思想与实践, 以及与之相关的置信区间。虽然我们主要以频率学派的观点理解假设检验, 但我们也简要地讨论贝叶斯学派的统计决策方法。另外, 我们也引入假设检验在线性回归中的应用——如何在有限制与无限制的情况下, 对 (非) 线性回归中的参数值进行假设检验。"
@@ -30,38 +31,46 @@
     "\n",
     "### 决策规则与误差\n",
     "\n",
-    "如果 $ \\Theta_{0} $ 是单元集, 我们称之为**简单假设**; 否则, 我们称其为**复合假设**。例如, 若参数空间 $ \\Theta=\\mathbb{R} $ , 则 $ \\Theta_{0}=\\left\\{ 0\\right\\} $ (或等价于 $ \\Theta_{0}=0 $ ) 是一个简单的假设, 而 $ \\Theta_{0}= (-\\infty, 0] $ (或者等价于 $ \\theta_{0}\\leq0 $ ) 是一个复合假设。\n",
+    "如果 $ \\Theta_{0} $ 只有一个单点, 我们称之为**简单假设**; 否则, 我们称其为**复合假设**。例如, 若参数空间 $ \\Theta=\\mathbb{R} $ , 则 $ \\Theta_{0}=\\left\\{ 0\\right\\} $ (或等价于 $ \\Theta_{0}=0 $ ) 是一个简单假设, 而 $ \\Theta_{0}= (-\\infty, 0] $ (或者等价于 $ \\theta_{0}\\leq0 $ ) 是一个复合假设。\n",
     "\n",
     "\n",
-    "**检验函数 (test function)**是一个映射\n",
+    "记样本空间为 $ \\mathcal{X} $，则有 $n$ 个观测值的样本的所有可能取值落在 $\\mathcal{X}^{n}$ 之内。\n",
+    "**检验函数 (test function)**\n",
     "\n",
     "$$ \n",
     "\\phi: \\mathcal{X}^{n}\\mapsto\\left\\{ 0, 1\\right\\} , \n",
     "$$ \n",
     "\n",
-    "其中, $ \\mathcal{X} $ 是样本空间。\n",
-    "\n",
-    "若 $ \\phi\\left (\\mathbf{x}\\right) =0 $ , 则接受零假设；若 $ \\phi\\left (\\mathbf{x}\\right) =1 $ , 则拒绝零假设。\n",
+    "将样本和决策对应起来，其中 $ \\phi\\left (\\mathbf{x}\\right) =0 $ 表示接受零假设；$ \\phi\\left (\\mathbf{x}\\right) =1 $ 表示拒绝零假设。\n",
     "\n",
     "我们定义**接受域 (acceptance region)**为 $ A_{\\phi}=\\left\\{ \\mathbf{x}\\in\\mathcal{X}^{n}: \\phi_{\\theta}\\left (\\mathbf{x}\\right) =0\\right\\} $ , 其补集**拒绝域 (rejection region)**为 $ R_{\\phi}=\\left\\{ \\mathbf{x}\\in\\mathcal{X}^{n}: \\phi\\left (\\mathbf{x}\\right) =1\\right\\} $ 。\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f95aa4a",
+   "metadata": {},
+   "source": [
     "\n",
     "检验 $ \\phi $**的功效函数 (power function)**被定义为\n",
     "\n",
-    " $$ \n",
+    "$$ \n",
     "\\beta\\left (\\theta\\right) =P_{\\theta}\\left\\{ \\phi\\left (\\mathbf{X}\\right) =1\\right\\} =E_{\\theta}\\left[\\phi\\left (\\mathbf{X}\\right) \\right].\n",
-    " $$\n",
+    "$$\n",
     " \n",
-    "功效函数衡量的是, 当数据由真实参数 $ \\theta $ 产生时, 检验函数拒绝零假设的概率, 从 $ P_{\\theta} $ 与 $ E_{\\theta} $ 中体现。\n",
+    "功效函数衡量是数值, 就是当 $ \\theta $ 为真实参数时该检验函数拒绝零假设的概率。\n",
     "\n",
-    "对于某参数值 $ \\theta\\in\\Theta_{1} $ , 检验的**功效 (power)**被定义为 $ \\beta\\left (\\theta\\right) $ ；检验的**大小 (size)**被定义为 $ \\sup_{\\theta\\in\\Theta_{0}}\\beta\\left (\\theta\\right) . $ \n",
+    "```{warning}\n",
+    "change size from 大小 to 显著性水平\n",
+    "```\n",
     "\n",
-    "注意, 检验功效的定义取决于备择假设 $ \\Theta_{1} $ 中的 $ \\theta $ ；而检验大小的定义与具体的 $ \\theta $ 值无关, 因为它是零假设 $ \\Theta_{0} $ 的上确界。当难以推导出具体的上确界时, 我们也常用**水平 (level)**$ \\alpha $ 这一概念来衡量检验, 水平 $ \\alpha\\in\\left (0, 1\\right) $ 是任意使得 $ \\alpha\\geq\\sup_{\\theta\\in\\Theta_{0}}\\beta\\left (\\theta\\right) $ 成立的值。\n",
+    "对于某参数值 $ \\theta\\in\\Theta_{1} $ , 检验的**功效 (power)**被定义为 $ \\beta\\left (\\theta\\right) $ ；检验的**大小 (size)**被定义为 $ \\sup_{\\theta\\in\\Theta_{0}}\\beta\\left (\\theta\\right). $ \n",
+    "检验功效的定义取决于备择假设 $ \\Theta_{1} $ 中的 $ \\theta $ ；而检验大小的定义与具体的 $ \\theta $ 值无关, 因为它是零假设 $ \\Theta_{0} $ 的上确界。当难以推导出具体的上确界时, 我们也常用**水平 (level)**$ \\alpha $ 这一概念来衡量检验, 水平 $ \\alpha\\in\\left (0, 1\\right) $ 是任意使得 $ \\alpha\\geq\\sup_{\\theta\\in\\Theta_{0}}\\beta\\left (\\theta\\right) $ 成立的值。\n",
     "\n",
     "一个大小为 $ \\alpha $ 的检验, 其水平一定大于等于 $ \\alpha $ ；一个水平为 $ \\alpha $ 的检验, 其大小一定小于等于 $ \\alpha $ 。\n",
     "\n",
-    "如果我们没有足够的信息来推导出一个测试确切的大小, 那么**水平**的概念是有用的。\n",
-    "信息来推导出测试的确切规模。"
+    "如果我们没有足够的信息来推导出一个测试确切的大小, 我们可以退而求其次，采用 **水平**这个概念。"
    ]
   },
   {
@@ -841,7 +850,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -855,7 +864,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "98c8651c14c5e67168ec7360df025b52a3dda054aca34605ea6bb4da8d25168e"
+   }
   }
  },
  "nbformat": 4,
