fix the term for consistency

--- a/lecture6-CN.ipynb
+++ b/lecture6-CN.ipynb
@@ -13,7 +13,7 @@
    "id": "fd3ee4eb",
    "metadata": {},
    "source": [
-    "在先前的章节中，我们已经学习了一些基本的渐近理论。我们可以应用这些结论来推导OLS统计量$\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'Y$的许多性质。 这是我们课程中的核心部分。在本章节我们将会覆盖如下要点：（i） $\\widehat{\\beta}$ 是线性投影系数 $\\beta$ 的一致估计量；（ii）$\\widehat{\\beta}$ 满足渐近正态分布；（iii） 渐近正态性使得可以对于 $\\beta$ 有渐近收敛；（iiii）在什么条件假设下我们可以提出一个可行的检验过程，从而对检验统计量中的方差分量作出一致估计。"
+    "在先前的章节中，我们已经学习了一些基本的渐近理论。我们可以应用这些结论来推导OLS统计量$\\widehat{\\beta}=\\left(X'X\\right)^{-1}X'Y$的许多性质。 这是我们课程中的核心部分。在本章节我们将会覆盖如下要点：（i） $\\widehat{\\beta}$ 是线性投影系数 $\\beta$ 的相合估计量；（ii）$\\widehat{\\beta}$ 满足渐近正态分布；（iii） 渐近正态性使得可以对于 $\\beta$ 有渐近收敛；（iiii）在什么条件假设下我们可以提出一个可行的检验过程，从而对检验统计量中的方差分量作出相合估计。"
    ]
   },
   {
@@ -21,9 +21,7 @@
    "id": "d0cfdbad",
    "metadata": {},
    "source": [
-    "## 一致性\n",
-    "\n",
-    "change 一致性 to 相合性"
+    "## 相合性"
    ]
   },
   {
@@ -31,13 +29,13 @@
    "id": "93793f32",
    "metadata": {},
    "source": [
-    "**一致性**是大样本估计中对于估计量最基本的要求。根据我们的直觉，对于一个任意大小的样本量，一个理想的估计量应该尽可能接近（依概率收敛到）真实值。如果一个估计量在任意大的样本之下仍然与真实值存在偏差，那么恐怕也很难说服他人使用这个估计量。\n",
+    "**相合性**是大样本估计中对于估计量最基本的要求。根据我们的直觉，对于一个任意大小的样本量，一个理想的估计量应该尽可能接近（依概率收敛到）真实值。如果一个估计量在任意大的样本之下仍然与真实值存在偏差，那么恐怕也很难说服他人使用这个估计量。\n",
     "\n",
-    "对于一个估计量 $\\widehat{\\theta}$ ，如果满足 $\\widehat{\\theta}\\stackrel{p}{\\to}\\theta$ ，则称 $\\widehat{\\theta}$ 为 $\\theta$ 的**一致估计**，其中 $\\theta$ 是一个非随机常数。\n",
+    "对于一个估计量 $\\widehat{\\theta}$ ，如果满足 $\\widehat{\\theta}\\stackrel{p}{\\to}\\theta$ ，则称 $\\widehat{\\theta}$ 为 $\\theta$ 的**相合估计**，其中 $\\theta$ 是一个非随机常数。\n",
     "\n",
-    "在OLS当中，如果$n\\to\\infty$ 时 $\\widehat{\\beta}\\stackrel{p}{\\to}\\beta$ ，则称 $\\widehat{\\beta}$ 是**一致的**。其中的 $\\beta$ 是模型 $y_{i}=x_{i}'\\beta+e_{i}$ with $E\\left[x_{i}e_{i}\\right]=0$ 的线性映射系数。\n",
+    "在OLS当中，如果$n\\to\\infty$ 时 $\\widehat{\\beta}\\stackrel{p}{\\to}\\beta$ ，则称 $\\widehat{\\beta}$ 是**相合的**。其中的 $\\beta$ 是模型 $y_{i}=x_{i}'\\beta+e_{i}$ with $E\\left[x_{i}e_{i}\\right]=0$ 的线性映射系数。\n",
     "\n",
-    "为了验证存在的**一致性**，我们参考公式\n",
+    "为了验证存在的**相合性**，我们参考公式\n",
     "\n",
     "$$\n",
     "\\widehat{\\beta}-\\beta=\\left(X'X\\right)^{-1}X'e=\\left(\\frac{1}{n}\\sum_{i=1}^{n}x_{i}x_{i}'\\right)^{-1}\\frac{1}{n}\\sum_{i=1}^{n}x_{i}e_{i}.\n",
@@ -64,7 +62,7 @@
     "\\widehat{\\beta}-\\beta\\stackrel{p}{\\to}Q^{-1}\\times0=0.\n",
     "$$\n",
     "\n",
-    "我们证明了 $\\widehat{\\beta}$ 是 $\\beta$ 的 一致估计量。\n",
+    "我们证明了 $\\widehat{\\beta}$ 是 $\\beta$ 的 相合估计量。\n",
     "\n",
     "```{admonition} Remark\n",
     "\n",
@@ -179,7 +177,7 @@
    "source": [
     "到目前为止，我们已经得到了 $\\widehat{\\beta}$ 的渐近分布。然后，只有当 $\\Omega$ 已知时，{eq}`eq:asym\\_norm`or {eq}`eq:asym\\_norm-pivot` 才能在派上用场。在现实情况中，通常 $\\Omega$ 是未知的，因此需要对其方差进行估计，才能对 $\\beta$ 进行推断。\n",
     "\n",
-    "假设 $\\tilde{\\Omega}$ 是 $\\Omega$ 的任意是一个一致估计量。依据 $\\tilde{\\Omega}\\stackrel{p}{\\to}\\Omega$ ，我们用 $\\Omega$ 替代{eq}`eq:asym\\_norm-pivot`中的 $\\tilde{\\Omega}$ ，\n",
+    "假设 $\\tilde{\\Omega}$ 是 $\\Omega$ 的任意是一个相合估计量。依据 $\\tilde{\\Omega}\\stackrel{p}{\\to}\\Omega$ ，我们用 $\\Omega$ 替代{eq}`eq:asym\\_norm-pivot`中的 $\\tilde{\\Omega}$ ，\n",
     "得到可行(feasible)统计量 $\\tilde{\\Omega}^{-1/2}\\sqrt{n}\\left(\\widehat{\\beta}-\\beta\\right) $.\n",
     "**可行统计量**不带有任何未知参数，可以用实际数据进行计算。\n",
     "\n",
@@ -202,8 +200,8 @@
    "id": "ca2550fd",
    "metadata": {},
    "source": [
-    "接下来的问题是如何一致估计 $\\Omega=Q^{-1}\\Sigma Q^{-1}$ ，或者说怎么计量一个合适的 $\\tilde{\\Omega}$ 。\n",
-    "我们之前已经有了  $\\widehat{Q}\\stackrel{p}{\\to}Q$ 。如果也有 $\\Sigma$ 的一致估计量 $\\tilde{\\Sigma}$ ，那么可以将他们代入，形成 $\\tilde{\\Omega}=\\widehat{Q}^{-1}\\tilde{\\Sigma}\\widehat{Q}^{-1}$ 。现在我们遇到了一个棘手的问题——如何一致估计$\\Sigma=E\\left[x_{i}x_{i}'e_{i}^{2}\\right]$ 。实际上，我们不能用样本均值 $x_{i}x_{i}'e_{i}^{2}$ 来估计，因为 $e_{i}$ 无法观测。\n",
+    "接下来的问题是如何相合估计 $\\Omega=Q^{-1}\\Sigma Q^{-1}$ ，或者说怎么计量一个合适的 $\\tilde{\\Omega}$ 。\n",
+    "我们之前已经有了  $\\widehat{Q}\\stackrel{p}{\\to}Q$ 。如果也有 $\\Sigma$ 的相合估计量 $\\tilde{\\Sigma}$ ，那么可以将他们代入，形成 $\\tilde{\\Omega}=\\widehat{Q}^{-1}\\tilde{\\Sigma}\\widehat{Q}^{-1}$ 。现在我们遇到了一个棘手的问题——如何相合估计$\\Sigma=E\\left[x_{i}x_{i}'e_{i}^{2}\\right]$ 。实际上，我们不能用样本均值 $x_{i}x_{i}'e_{i}^{2}$ 来估计，因为 $e_{i}$ 无法观测。\n",
     "\n",
     "基于同方差有：$\\Omega=Q^{-1}\\Sigma Q^{-1}=\\sigma^{2}Q^{-1}$，相似地我们不能用 $e_{i}^{2}$ 来估计 $\\sigma^{2}$ 。"
    ]
@@ -256,7 +254,7 @@
     "```{admonition} 历史趣闻\n",
     "@white1980heteroskedasticity \n",
     "引起了人们对经济场景中违反经典假设的线性回归的注意。\n",
-    "计量经济学家们开始关注，甚至痴迷于统计推断中的方差估计。\n",
+    "计量经济学家们开始关注统计推断中的方差估计。\n",
     "在接下来的几十年里，涌现出大量方差估计理论，用于处理各种各样偏离经典假设的情形。\n",
     "```\n",
     "\n",
@@ -302,9 +300,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": {
@@ -313,7 +311,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "R",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
