--- a/lecture8-CN.ipynb
+++ b/lecture8-CN.ipynb
@@ -13,7 +13,7 @@
     "一个 **假设 (hypothesis)** 是关于参数空间 $ \\Theta $ 的论断。\n",
     "\n",
     "\n",
-    "假设检验检查数据是否满足一个 **零假设 (null hypothesis)** $ \\Theta_{0} $ , 也即是我们研究的 $ \\Theta $ 之子集。理想情况下, 这一零假设应该是由科学理论提出的。**备择假设 (alternative hypothesis)** $ \\Theta_{1}=\\Theta\\backslash\\Theta_{0} $ 是 $ \\Theta_{0}$ 的补集。\n",
+    "假设检验检查数据是否满足一个 **零假设 (null hypothesis)** $\\Theta_{0}$ , 也即是我们研究的 $ \\Theta $ 之子集。理想情况下, 这一零假设应该是由科学理论提出的。**备择假设 (alternative hypothesis)** $\\Theta_{1}=\\Theta\\backslash\\Theta_{0}$ 是 $ \\Theta_{0}$ 的补集。\n",
     "基于观察到的数据, 我们选择接受或者拒绝零假设。如果零假设被拒绝, 则意味着从统计学角度来看, 数据与所提出的科学理论不相容。\n",
     "\n",
     "\n",
@@ -86,13 +86,13 @@
     "\\end{aligned}\n",
     " $$ \n",
     "\n",
-    "上式中的不等式可由Bonferroni不等式\n",
+    "上式中的不等式可由下方的Bonferroni不等式推导得出。\n",
     "\n",
     " $$\n",
     "P\\left (A\\cup B\\right) \\leq P\\left (A\\right) +P\\left (B\\right) \n",
     " $$\n",
     "\n",
-    "推导得出。\n",
+    "\n",
     "\n",
     "因此, 检验 $ \\phi\\left (\\mathbf{X}_{1}, \\mathbf{X}_{2}\\right) $ 的水平为 $ \\alpha $ 。但该检验的具体大小未知, 除非我们可以得到有关该联合分布的具体信息。即使我们知道 $ X_{1i} $ 和 $ X_{2i} $ 的相关性, 将两个边际正态分布放在一起, 也不能自然构成联合正态分布。\n",
     "\n",
@@ -143,7 +143,7 @@
    "source": [
     "\n",
     "\n",
-    "一般来说, 我们通过提出检验统计量 $ T_{n}: \\mathcal{X}^{n}\\mapsto\\mathbb{R}^{+} $ 与临界值 $ c_{1-\\alpha} $ 来设计检验。对于给定的 $ T_{n} $ 与 $ c_{1-\\alpha} $ , 检验函数可写作\n",
+    "一般来说, 我们通过提出检验统计量 $ T_{n}: \\mathcal{X}^{n}\\mapsto\\mathbb{R}^{+} $ 与临界值 $ c_{1-\\alpha} $ 来设计检验。对于给定的 $ T_{n} $ 与 $ c_{1-\\alpha} $ , 检验函数可写作：\n",
     "\n",
     " $$ \n",
     "\\phi\\left (\\mathbf{X}\\right) =1\\left\\{ T_{n}\\left (\\mathbf{X}\\right) >c_{1-\\alpha}\\right\\} .\n",
