--- a/lecture4-CN.ipynb
+++ b/lecture4-CN.ipynb
@@ -5,7 +5,7 @@
    "id": "d1733900",
    "metadata": {},
    "source": [
-    "# 最小二乘法: 有限样本理论"
+    "# 最小二乘法:有限样本理论"
    ]
   },
   {
@@ -349,6 +349,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8698189a",
+   "metadata": {},
+   "source": [
+    "异方差在计量经济学中无处不见。一个能够自然产生条件异方差的例子是 **线性概率模型** $y_{i}=x_{i}'\\beta+e_{i}$ 。$y_{i}\\in\\left\\{ 0,1\\right\\}$ 是一个二元因变量。 把CEF假设为 $E\\left[y_{i}|x_{i}\\right]=x_{i}'\\beta$ ，那么我们可以使用OLS的来估计 $\\beta$ 。\\\n",
+    "条件方差为:\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{var}\\left[e_{i}|x_{i}\\right]=\\mathrm{var}\\left[y_{i}|x_{i}\\right]=E\\left[y_{i}|x_{i}\\right]\\left(1-E\\left[y_{i}|x_{i}\\right]\\right)=x_{i}'\\beta\\left(1-x_{i}'\\beta\\right)\n",
+    "$$\n",
+    "\n",
+    "这里的条件方差随着 $x_{i}$ 而发生改变。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "413a8324",
    "metadata": {},
    "source": [
@@ -549,9 +564,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": {
@@ -560,7 +575,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "R",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
