update of lecture9

--- a/lecture9-CN.ipynb
+++ b/lecture9-CN.ipynb
@@ -78,7 +78,7 @@
     "从原式中提取出这些平均后的等式就能得到：\n",
     "\n",
     "$$\n",
-    "\\tilde{y}_{it}=\\tilde{x}_{it}'\\beta_{2}+\\tilde{\\epsilon}_{it}\\label\n",
+    "\\tilde{y}_{it}=\\tilde{x}_{it}'\\beta_{2}+\\tilde{\\epsilon}_{it}\n",
     "$$\n",
     "\n",
     "其中 $\\tilde{y}_{it}=y_{it}-\\overline{y}_{i}$ 。\\\n",
