--- a/lecture9-CN.ipynb
+++ b/lecture9-CN.ipynb
@@ -23,14 +23,16 @@
    "id": "356642ea",
    "metadata": {},
    "source": [
-    "一个面板数据沿着时间维度 $t=1,\\ldots,T$ 观测同一个个体。我们假设 $i=1,\\ldots,n$ 的各个样本都是独立的。但是我们允许对于同一个 $i$ ，沿着 $t=1,\\ldots,T$ 得到的组内数据存在一定程度的不独立性。\\\n",
-    "我们有线性等式：\n",
+    "一个面板数据沿着时间维度 $t=1,\\ldots,T$ 观测同一个个体。\n",
+    "简单起见，我们假设 $i=1,\\ldots,n$ 的各个样本点都是独立的。(今年有文献处理面板数据在横截面行的相关性。方法相对复杂。)\n",
+    "但是我们允许对于同一个 $i$ ，沿着 $t=1,\\ldots,T$ 得到的组内数据存在一定程度上相互依赖。\n",
+    "我们有线性回归方程：\n",
     "\n",
     "$$\n",
-    "y_{it}=\\beta_{1}+x_{it}'\\beta_{2}+u_{it},\\ i=1,\\ldots,n;t=1,\\ldots,T\\label{eq:basic_eq}\n",
+    "y_{it}=\\beta_{1}+x_{it}'\\beta_{2}+u_{it},\\ i=1,\\ldots,n;t=1,\\ldots,T\n",
     "$$(eq:basic_eq)\n",
     "\n",
-    "其中 $u_{it}=\\alpha_{i}+\\epsilon_{it}$ 被称之为**复合误差**。\\\n",
+    "其中 $u_{it}=\\alpha_{i}+\\epsilon_{it}$ 被称之为**复合误差** (composite error)。\n",
     "需要注意的是： $\\alpha_{i}$ 是不随时间变化的不可观测的异质性。而 $\\epsilon_{it}$ 则是在不同个体和时期间都不相同。"
    ]
   },
@@ -39,7 +41,7 @@
    "id": "75516030",
    "metadata": {},
    "source": [
-    "面板数据回归中，最重要的方法就是固定效应回归和随机效应回归。两种估计的渐近分布都可以从OLS回归的知识中衍生出来。因此，面板数据估计是我们这门课程中学到的知识的一个很好的影响。它是计量经济学中基础线性回归部分的最重要的一块。"
+    "面板数据回归中，最重要的方法就是固定效应回归和随机效应回归。两种估计的渐近分布都可以从OLS回归的知识中衍生出来。因此，面板数据估计是我们这门课程中学到的知识的一个很好的应用。它是计量经济学中基础线性回归部分的最重要的一块。"
    ]
   },
   {
@@ -200,7 +202,7 @@
     "RE.1 显然能够推出 $\\mathrm{cov}\\left(\\alpha_{i},x_{it}\\right)=0$ ，因此：\n",
     "\n",
     "$$\n",
-    "S=\\mathrm{var}\\left(u_{i}|\\mathbf{x}_{i}\\right)=\\sigma_{\\alpha}^{2}\\mathbf{1}_{T}\\mathbf{1}_{T}'+\\sigma_{\\epsilon}^{2}I_{T},\\ \\mbox{for all }i=1,\\ldots,n.\n",
+    "S=\\mathrm{var}\\left(u_{i}|\\mathbf{x}_{i}\\right)=\\sigma_{\\alpha}^{2}\\mathbf{1}_{T}\\mathbf{1}_{T}'+\\sigma_{\\epsilon}^{2}I_{T},\\ \\forall i=1,\\ldots,n.\n",
     "$$\n",
     "\n",
     "因为协方差矩阵不能用单位矩阵通过标量乘法运算得到，所以OLS不存在有效性。\n",
@@ -269,9 +271,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": {
@@ -280,10 +282,15 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "R",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "98c8651c14c5e67168ec7360df025b52a3dda054aca34605ea6bb4da8d25168e"
+   }
   }
  },
  "nbformat": 4,
