add code in lec4

--- a/lecture4-CN.ipynb
+++ b/lecture4-CN.ipynb
@@ -83,6 +83,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "425b819a",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "rpois(20)\n",
+    "\n",
+    "rnorm(20)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "329d2613",
    "metadata": {},
@@ -242,7 +258,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 均值和方差<span id=\"mean-and-variance\" label=\"mean-and-variance\">\\[mean-and-variance\\]</span>\n",
+    "## 均值和方差\n",
     "\n",
     "现在我们放松正态分布假设和统计独立性。\n",
     "我们用 $Y=X\\beta+e$ 来表示回归模型, 并且假设：\n",
