clean up redundant files

--- a/lecture4-CN.ipynb
+++ b/lecture4-CN.ipynb
@@ -273,7 +273,14 @@
     "其中第一个条件被称为 **均值独立** 假设, 而第二个则被称为 **同方差** 假设. \n",
     "与正态分布假设不同, 它们对 $e_{i}$ 的分布没有限制；\n",
     "而只是限制了给定 $x_{i}$ 后 $e_{i}$ 的一阶矩和二阶矩。 \n",
-    "这两个条件下，我们可以得到如下性质。\n",
+    "这两个条件下，我们可以得到如下性质。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cea95e4a",
+   "metadata": {},
+   "source": [
     "\n",
     "-  无偏性: \n",
     "\n",
@@ -330,7 +337,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8f17c37b",
    "metadata": {
     "inputHidden": false,
@@ -339,15 +347,13 @@
      "languageId": "r"
     }
    },
+   "outputs": [],
    "source": [
-    "n = 100\n",
-    "beta0 = matrix(c(0,1, 1), ncol = 1)\n",
-    "\n",
-    "X = cbind(rnorm(n), rpois(n, 3) )\n",
-    "e = X[,1] * rnorm(n)  \n",
-    "\n",
-    "y = cbind(1, X ) * beta0 + e\n",
-    "plot( y = e, x = X[,1])"
+    "n = 100; X = rnorm(n)\n",
+    "u = rnorm(n)\n",
+    "plot( y = u, x = X, col = \"blue\", ylab = \"e\")\n",
+    "e = X * rnorm(n)\n",
+    "points( y = e, x = X, col = \"red\")"
    ]
   },
   {
