add code into lec4

--- a/lecture4-CN.ipynb
+++ b/lecture4-CN.ipynb
@@ -385,6 +385,165 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dcacbcd",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# feel free to change n and beta0 to see the effect of sample size \n",
+    "# and parameter values\n",
+    "n = 100\n",
+    "beta0 = c(1.0, 1.0, 0.0) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "282dd590",
+   "metadata": {},
+   "source": [
+    "The sample size is set to be 100, which is moderate for simple regressions. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06abab75",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "X = cbind(rnorm(n), rpois(n, 3) )\n",
+    "e = rlogis(n)\n",
+    "\n",
+    "y = cbind(1, X ) %*% beta0 + e # generate data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc415264",
+   "metadata": {},
+   "source": [
+    "Generate data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b073512d",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "reg1 = lm( y ~ X ) # OLS regression\n",
+    "summary(reg1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d24ecf7",
+   "metadata": {
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "yhat = predict( reg1, data  = X ) # predicted value from the OLS regression\n",
+    "matplot( x = X[,1], y = cbind(y, yhat), pch = 1:2, xlab = \"x\", ylab = \"y\")\n",
+    "legend(x = 2, y = -2, pch = 1:2, col = 1:2, legend = c(\"y\", \"predicted\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "743f543a",
+   "metadata": {},
+   "source": [
+    "Change $y$ to be a binary variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ffb1e40",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "y01 = (y >= 0) \n",
+    "reg2 = lm( y01 ~ X ) # logistic regression\n",
+    "summary(reg2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f790cc5",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "yhat01 = predict( reg2, data  = X )\n",
+    "reg3 = glm( y01 ~ X, family=binomial(link='logit') )\n",
+    "summary(reg3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bf0ec4e",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "yhat01_logit = predict( reg3, data  = X, type=\"response\" )\n",
+    "matplot( x = X[,1], y = cbind(y01, yhat01, yhat01_logit), pch = 1:3, xlab = \"x\", ylab = \"y\" )\n",
+    "legend(x = 2, y = .3, pch = 1:3, col = 1:3, legend = c(\"y\", \"linear pred.\", \"logit pred.\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f397d39",
+   "metadata": {},
+   "source": [
+    "## Heteroskedasticity\n",
+    "\n",
+    "Heteroskedasticity can happen even if the observations are iid across $i$. In the following example, $e_i = x_{1i} u_i $ and $x_{1i}$ and $u_i \\sim (0, \\sigma^2 ) $ are independent. The mean independence \n",
+    "$$E[e_i|x_i] = x_{1i} E[u_i|x_i] = 0$$ \n",
+    "is still satisfied, but \n",
+    "$$E[e_i^2 |x_i] = x_{1i}^2 E[u_i^2 |x_i] = x_{1i}^2 \\sigma^2.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc2f0e6b",
+   "metadata": {},
+   "source": [
+    "The OLS estimator is still consistent and asymptotically normal, but the asymptotic variance is difference from the case of homoskedasticity."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "413a8324",
    "metadata": {},
