--- a/lecture10-CN.ipynb
+++ b/lecture10-CN.ipynb
@@ -272,8 +272,10 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    " &  & \\mathbb{E}\\left[\\epsilon_{i,t}-\\epsilon_{i,t-1}|\\alpha_{i},x_{i1},\\ldots,x_{iT},\\epsilon_{i,t-2},\\epsilon_{i,t-3},\\ldots,\\epsilon_{i1},y_{i0}\\right]\\\\\n",
-    " & = & \\mathbb{E}\\left[\\epsilon_{i,t}-\\epsilon_{i,t-1}|\\alpha_{i},x_{i1},\\ldots,x_{iT},y_{i,t-2},y_{i,t-3},\\ldots,y_{i0}\\right]=0\\end{aligned}\n",
+    " &   \\mathbb{E}\\left[\\epsilon_{i,t}-\\epsilon_{i,t-1}|\\alpha_{i},x_{i1},\\ldots,x_{iT},\\epsilon_{i,t-2},\\epsilon_{i,t-3},\\ldots,\\epsilon_{i1},y_{i0}\\right]\\\\\n",
+    " & =  \\mathbb{E}\\left[\\epsilon_{i,t}-\\epsilon_{i,t-1}|\\alpha_{i},x_{i1},\\ldots,x_{iT},y_{i,t-2},y_{i,t-3},\\ldots,y_{i0}\\right]\\\\\n",
+    " & = 0\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "根据假设\n",
