--- a/lecture11-CN.ipynb
+++ b/lecture11-CN.ipynb
@@ -135,10 +135,9 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\widehat{\\beta} & =  \\left(\\frac{1}{n}\\sum x_{i}z_{i}'W\\frac{1}{n}\\sum z_{i}x_{i}'\\right)^{-1}\\frac{1}{n}\\sum x_{i}z_{i}'W\\frac{1}{n}\\sum z_{i}y_{i}\\\\\n",
-    " & =  \\left(\\frac{X'Z}{n}W\\frac{Z'X}{n}\\right)^{-1}\\frac{X'Z}{n}W\\frac{Z'y}{n}\\\\\n",
-    " & =  \\left(X'ZWZ'X\\right)^{-1}X'ZWZ'y.&\n",
-    "\\end{aligned}\n",
+    "\\widehat{\\beta} & = & \\left(\\frac{1}{n}\\sum x_{i}z_{i}'W\\frac{1}{n}\\sum z_{i}x_{i}'\\right)^{-1}\\frac{1}{n}\\sum x_{i}z_{i}'W\\frac{1}{n}\\sum z_{i}y_{i}\\\\\n",
+    " & = & \\left(\\frac{X'Z}{n}W\\frac{Z'X}{n}\\right)^{-1}\\frac{X'Z}{n}W\\frac{Z'y}{n}\\\\\n",
+    " & = & \\left(X'ZWZ'X\\right)^{-1}X'ZWZ'y.\\end{aligned}\n",
     "$$\n",
     "\n",
     "在恰好识别的情况下，该表达式包含了2SLS的估计量。\n",
@@ -239,11 +238,10 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    " &  \\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\Omega W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}-\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}\\\\\n",
-    " & =  A'\\Omega A-B'\\Omega B\\\\\n",
-    " & = \\left(A-B+B\\right)'\\Omega\\left(A-B+B\\right)-B'\\Omega B\\\\\n",
-    " & = \\left(A-B\\right)'\\Omega\\left(A-B\\right)+\\left(A-B\\right)'\\Omega B+B'\\Omega\\left(A-B\\right).\n",
-    "\\end{aligned}\n",
+    " &  & \\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\Omega W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}-\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}\\\\\n",
+    " & = & A'\\Omega A-B'\\Omega B\\\\\n",
+    " & = & \\left(A-B+B\\right)'\\Omega\\left(A-B+B\\right)-B'\\Omega B\\\\\n",
+    " & = & \\left(A-B\\right)'\\Omega\\left(A-B\\right)+\\left(A-B\\right)'\\Omega B+B'\\Omega\\left(A-B\\right).\\end{aligned}\n",
     "$$\n",
     "\n",
     "注意到：\n",
@@ -251,8 +249,7 @@
     "$$\n",
     "\\begin{aligned}\n",
     "B'\\Omega A & =\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}\\Sigma'\\Omega^{-1}\\Omega W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}\\\\\n",
-    " & =\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}\\Sigma'W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}=\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}=B'\\Omega B\n",
-    "\\end{aligned}\n",
+    " & =\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}\\Sigma'W\\Sigma\\left(\\Sigma'W\\Sigma\\right)^{-1}=\\left(\\Sigma'\\Omega^{-1}\\Sigma\\right)^{-1}=B'\\Omega B,\\end{aligned}\n",
     "$$\n",
     "\n",
     "于是我们能够从中推出： $B'\\Omega\\left(A-B\\right)=0$ 和\n",
@@ -318,9 +315,8 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\widehat{\\beta} & =  \\left(X'Z\\left(\\widehat{\\sigma}^{2}\\frac{Z'Z}{n}\\right)^{-1}Z'X\\right)^{-1}X'Z\\left(\\widehat{\\sigma}^{2}\\frac{Z'Z}{n}\\right)^{-1}Z'y\\\\\n",
-    " & =  \\left(X'Z\\left(Z'Z\\right)^{-1}Z'X\\right)^{-1}X'Z\\left(Z'Z\\right)^{-1}Z'y.\n",
-    "\\end{aligned}\n",
+    "\\widehat{\\beta} & = & \\left(X'Z\\left(\\widehat{\\sigma}^{2}\\frac{Z'Z}{n}\\right)^{-1}Z'X\\right)^{-1}X'Z\\left(\\widehat{\\sigma}^{2}\\frac{Z'Z}{n}\\right)^{-1}Z'y\\\\\n",
+    " & = & \\left(X'Z\\left(Z'Z\\right)^{-1}Z'X\\right)^{-1}X'Z\\left(Z'Z\\right)^{-1}Z'y.\\end{aligned}\n",
     "$$\n",
     "\n",
     "当 $L>K$ 时，这和 2SLS 表达式完全一致。因此, 两阶段最小二乘可以被视为GMM的一种带有伴随矩阵 $\\left(Z'Z/n\\right)^{-1}$ 的特殊情况。在条件同方差假设下, 2SLS 是有效估计量。然而，尽管 2SLS 十分受欢迎，在异方差的情况下它不是有效的。\n",
