ZT revised part of lec11

--- a/lecture11-CN.ipynb
+++ b/lecture11-CN.ipynb
@@ -13,7 +13,7 @@
    "id": "41b75691",
    "metadata": {},
    "source": [
-    "**广义矩估计**（*Generalized method of moments*  GMM ）是一个拓展了矩估计的估计方法。这种方法得到的参数值能够最小化矩阵的二次型。它对于那些可以从经济学模型中提取出矩条件的估计特别有效。GMM是当代计量经济学最受欢迎的方法之一，两阶段最小二乘法（2SLS）和三阶段最小二乘法（3SLS）也是它的特例。"
+    "**广义矩估计**（*Generalized method of moments*  GMM ）是一个拓展了矩估计的估计方法。这种方法得到的参数值能够最小化矩阵的二次型。它特别适用于可以提取出矩条件的经济学模型。GMM是当代计量经济学最受欢迎的方法之一，两阶段最小二乘法（2SLS）特例。"
    ]
   },
   {
@@ -29,13 +29,13 @@
    "id": "a4e3e882",
    "metadata": {},
    "source": [
-    "我们先前讨论了在 $K$ 个回归量的一元线性回归方程\n",
+    "我们先前讨论了又 $K$ 个回归量的一元线性回归方程\n",
     "\n",
     "$$\n",
     "y_{i}=x_{i}'\\beta+\\epsilon_{i}\n",
     "$$\n",
     "\n",
-    "识别是进行结构性估计的前提条件。从现在起，我们假设模型是可识别的：存在工具 $z_{i}$ 的 $L\\times1$ 向量使得 $\\mathbb{E}\\left[z_{i}\\epsilon_{i}\\right]=0_{L}$ 。且$\\Sigma:=\\mathbb{E}\\left[z_{i}x_{i}'\\right]$ 是列满秩的。将 $\\beta_{0}$ 记为方程 $E\\left[z_{i}\\left(y_{i}-x_{i}'\\beta\\right)\\right]=0_{L}$ 的根。其具有唯一识别性。\n",
+    "识别是进行结构性估计的前提条件。从现在起，我们假设模型是可识别的：存在 $L\\times1$ 工具向量 $z_{i}$，使得 $\\mathbb{E}\\left[z_{i}\\epsilon_{i}\\right]=0_{L}$ 。且$\\Sigma:=\\mathbb{E}\\left[z_{i}x_{i}'\\right]$ 是列满秩的。将 $\\beta_{0}$ 记为方程 $E\\left[z_{i}\\left(y_{i}-x_{i}'\\beta\\right)\\right]=0_{L}$ 的根。其具有唯一识别性。\n",
     "\n",
     "### 恰好识别\n",
     "当 $L=K$ ，工具变量回归 **恰好识别** (just-identified 或 exactly identified)。\n",
@@ -48,11 +48,10 @@
     "然后我们可以用封闭形式的：\n",
     "\n",
     "$$\n",
-    "\\beta_{0}=\\Sigma^{-1}\\mathbb{E}\\left[z_{i}y_{i}\\right]\\label{eq:just_beta}\n",
-    "$$\n",
+    "\\beta_{0}=\\Sigma^{-1}\\mathbb{E}\\left[z_{i}y_{i}\\right]\n",
+    "$$(eqn:just_beta)\n",
     "\n",
-    "来表示 $\\beta_{0}$ \n",
-    "\n",
+    "来表示 $\\beta_{0}$。\n",
     "封闭解使得我们能用样本矩来代替总体估计，这属于一种矩估计。不过，这种估计方法我们放到下一章节介绍。"
    ]
   },
@@ -63,35 +62,31 @@
    "source": [
     "### 过度识别\n",
     "\n",
-    "当 $L>K$ ，模型过度识别（over identified）。正交条件依然能够得到：\n",
+    "当 $L>K$ ，模型过度识别（over identified）。根据正交条件依然能够得到：\n",
     "\n",
     "$$\n",
-    "\\Sigma\\beta_{0}=\\mathbb{E}\\left[z_{i}y_{i}\\right],\\label{eq:moment2}\n",
-    "$$\n",
+    "\\Sigma\\beta_{0}=\\mathbb{E}\\left[z_{i}y_{i}\\right],\n",
+    "$$(eq:moment2)\n",
     "\n",
-    "但是由于 $\\Sigma$ 不是一个方阵，因此像 ([\\[eq:just\\_beta\\]](#eq:just_beta){reference-type=\"ref\"\n",
-    "reference=\"eq:just_beta\"})一样写出 $\\beta_{0}$ 。\n",
+    "但是由于 $\\Sigma$ 不是一个方阵，因此不能像 {eq}`eqn:just_beta` 一样写出 $\\beta_{0}$ 。\n",
     "\n",
-    "为了更直接地表达 $\\beta_{0}$ ，我们可以定义一个判别函数：\n",
+    "为了更直接地表达 $\\beta_{0}$ ，我们可以定义一个目标函数：\n",
     "\n",
     "$$\n",
     "Q\\left(\\beta\\right)=\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]'W\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta\\right)\\right]\n",
     "$$\n",
     "\n",
-    "其中 $W$ 是一个 $L\\times L$ 的非随机正定对称矩阵。（我们将在后面讨论如何选择 $w$ ）由于它的形式是二次型，所有的$\\beta$ 都满足$Q\\left(\\beta\\right)\\geq0$ 。\n",
-    "\n",
-    "当且仅当 $\\beta=\\beta_{0}$ 时，**识别** 意味着 $Q\\left(\\beta\\right)=0$ 。因此我们可以得到结论：\n",
+    "其中 $W$ 是一个 $L\\times L$ 的非随机正定对称矩阵。（我们将在后面讨论如何选择 $w$。）由于它的形式是二次型， $Q\\left(\\beta\\right)\\geq 0$ 对所有的 $\\beta$ 成立。**识别** 意味着 $Q\\left(\\beta\\right)=0$，该等式当且仅当 $\\beta=\\beta_{0}$ 成立。因此我们可以得到结论：\n",
     "\n",
     "$$\n",
     "\\beta_{0}=\\arg\\min_{\\beta}Q\\left(\\beta\\right)\n",
     "$$\n",
     "\n",
-    "是唯一的最小化函数。\n",
-    "\n",
-    "因为 $Q\\left(\\beta\\right)$ 是一个 $\\beta$ 的光滑函数， $\\beta_{0}$ 的最小化函数可以用一阶条件来表示：\n",
+    "是最小化目标函数的唯一取值。\n",
+    "因为 $Q\\left(\\beta\\right)$ 是一个 $\\beta$ 的光滑函数， $\\beta_{0}$ 这个最小化取值可以用一阶条件来刻画：\n",
     "\n",
     "$$\n",
-    "0_{K}=\\frac{\\partial}{\\partial\\beta}Q\\left(\\beta_{0}\\right)=-2\\Sigma'W\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta_{0}\\right)\\right]\n",
+    "0_{K}=\\frac{\\partial}{\\partial\\beta}Q\\left(\\beta_{0}\\right)=-2\\Sigma'W\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}\\beta_{0}\\right)\\right].\n",
     "$$\n",
     "\n",
     "整理上方的等式可以得到：\n",
@@ -100,20 +95,32 @@
     "\\Sigma'W\\Sigma\\beta_{0}=\\Sigma'W\\mathbb{E}\\left[z_{i}y_{i}\\right].\n",
     "$$\n",
     "\n",
-    "在秩条件 $\\Sigma'W\\Sigma$ 可逆的基础上，我们可以解得：\n",
+    "在 $\\Sigma$ 满秩的条件下， $\\Sigma'W\\Sigma$ 可逆， 因此我们可以解得：\n",
     "\n",
     "$$\n",
-    "\\beta_{0}=\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\mathbb{E}\\left[z_{i}y_{i}\\right].\\label{eq:over_beta}\n",
-    "$$\n",
+    "\\beta_{0}=\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W\\mathbb{E}\\left[z_{i}y_{i}\\right].\n",
+    "$$(eq:over_beta)\n",
     "\n",
-    "因为我们有比未知参数($K$) 数量更多的矩 ($L$) 因此我们称之为：**广义矩估计** 。\n",
+    "因为我们有比未知参数 ($K$) 数量更多的矩 ($L$),所以我们称之为：**广义矩估计** 。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b22a29cf",
+   "metadata": {},
+   "source": [
+    "(this should be remark)\n",
+    "上述等式可以通过在 (eq)`eq:moment2` 两边同时乘上 $\\Sigma'W$ 得到，而不需要涉及最小化问题。\n",
+    "(the above should be remark)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7209b9a",
+   "metadata": {},
+   "source": [
     "\n",
-    "上述等式可以通过在 ([\\[eq:moment2\\]](#eq:moment2){reference-type=\"ref\"\n",
-    "reference=\"eq:moment2\"}) 两边同时乘上 $\\Sigma'W$ 得到，而不需要涉及最小化问题。\n",
-    "\n",
-    "尽管我们把恰好识别和过度识别分开讨论，实际上前者([\\[eq:just\\_beta\\]](#eq:just_beta){reference-type=\"ref\"\n",
-    "reference=\"eq:just_beta\"})是后者([\\[eq:over\\_beta\\]](#eq:over_beta){reference-type=\"ref\"\n",
-    "reference=\"eq:over_beta\"})的一个特殊情况。 从这个角度上说，GMM真的是“广义”的矩估计。要理解这个观点，注意到当 $L=K$ , 由于 $\\Sigma$ 是一个方阵，给定任意的 $W$ 我们能够得到：\n",
+    "尽管我们把恰好识别和过度识别分开讨论，实际上前者 (eq)`eq:just_beta`) 是后者 (eq)`eq:over_beta` 的一个特殊情况。 从这个角度上说，GMM是真正意义上的“广义”的矩估计。要理解这个观点，注意到当 $L=K$ , 由于 $\\Sigma$ 是一个方阵，给定任意的 $W$ 我们能够得到：\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -121,7 +128,7 @@
     " & =\\Sigma^{-1}W^{-1}W\\mathbb{E}\\left[z_{i}y_{i}\\right]=\\Sigma^{-1}\\mathbb{E}\\left[z_{i}y_{i}\\right],\\end{aligned}\n",
     "$$\n",
     " \n",
-    "也就是说，在恰好识别的情况下， $W$ 在当中没有起到作用。因为任何的 $W$ 都会得到相同的 $\\beta_{0}$ 的结果。\n"
+    "也就是说，在恰好识别的情况下， $W$ 没有起到作用，因为任何的 $W$ 都会得到相同的 $\\beta_{0}$ 。\n"
    ]
   },
   {
@@ -141,11 +148,22 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "在恰好识别的情况下，该表达式包含了2SLS的估计量。\n",
+    "在恰好识别的情况下，该表达式讲2SLS\n",
     "\n",
     "$$\n",
     "\\hat{\\beta}=\\left(\\frac{Z'X}{n}\\right)^{-1}\\frac{Z'y}{n}=\\left(Z'X\\right)^{-1}Z'y\n",
     "$$\n",
+    "\n",
+    "包含为它的特例。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ecbd2f9",
+   "metadata": {},
+   "source": [
+    "(this is an exercise)\n",
     "\n",
     "同样的GMM估计量 $\\hat{\\beta}$ 可以通过最小化函数得到：\n",
     "\n",
@@ -154,28 +172,67 @@
     "$$\n",
     "\n",
     "或者更具体来说：\n",
-    "$\\hat{\\beta}=\\arg\\min_{\\beta}\\left(y-X\\beta\\right)'ZWZ'\\left(y-X\\beta\\right).$\n",
+    "$\\hat{\\beta}=\\arg\\min_{\\beta}\\left(y-X\\beta\\right)'ZWZ'\\left(y-X\\beta\\right).$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ef61ca4",
+   "metadata": {},
+   "source": [
     "\n",
-    "现在我们来验证 $\\widehat{\\beta}$ 的渐近特性,以下是一系列的假设：\n",
+    "现在我们来验证 $\\widehat{\\beta}$ 的渐近特性。以下是一系列的假设：\n",
     "\n",
     "\n",
     "```{admonition} Assumption A.1 \n",
+    "put the text of A.1 here\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56a80bac",
+   "metadata": {},
+   "source": [
+    "\n",
     "A.1 假设我们可以使用大数定律，以至于 $Z'X/n$ 和 $Z'\\epsilon/n$ 依概率收敛于它们对应的样本。\n",
     "$Z'X/n\\stackrel{\\mathrm{p}}{\\to}\\Sigma$ 和\n",
-    "$Z'\\epsilon/n\\stackrel{\\mathrm{p}}{\\to}0_{L}$.\n",
-    "\n",
-    "```\n",
+    "$Z'\\epsilon/n\\stackrel{\\mathrm{p}}{\\to}0_{L}$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60bf7623",
+   "metadata": {},
+   "source": [
+    "This is a theorem \n",
     "\n",
     "基于 A.1 的假设, $\\widehat{\\beta}$ 是相合的。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45a7a280",
+   "metadata": {},
+   "source": [
+    "(this is a proof)\n",
     "\n",
-    "这与证明OLS估计量的相合性类似：\n",
+    "这里的证明步骤于证明OLS估计量的相合性类似：\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "\\widehat{\\beta} & =\\left(X'ZWZ'X\\right)^{-1}X'ZWZ'\\left(X'\\beta_{0}+\\epsilon\\right)\\\\\n",
     " & =\\beta_{0}+\\left(\\frac{X'Z}{n}W\\frac{Z'X}{n}\\right)^{-1}\\frac{X'Z}{n}W\\frac{Z'\\epsilon}{n}\\\\\n",
     " & \\stackrel{\\mathrm{p}}{\\to}\\beta_{0}+\\left(\\Sigma'W\\Sigma\\right)^{-1}\\Sigma'W0=\\beta_{0}.\\end{aligned}\n",
-    "$$\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d10e854",
+   "metadata": {},
+   "source": [
     "\n",
     "为了验证渐近的正态性，我们假设中心极限定理可以适用。\n",
     "\n",
@@ -432,9 +489,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
   },
   "language_info": {
    "codemirror_mode": {
@@ -443,7 +500,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "R",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
